# togglebot

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  deny.toml  justfile  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
.sqlx/: query-0a78f5eb5e1450081f9f65dc600c5a2fe85b4952595ddad01525023e617c2641.json  query-0acbddb168d467995d4eb35016d22f91d534bbe11ec3d78197cc70ce84301987.json  query-1943ddc073d0944be9c4d00b4610e3da9b9cb58748d7402aef00d42509108a1e.json  query-1df801a530a8af232455b9b6ce40630b82eb8c8d0a58032a99ab601ffd6f62de.json  query-5717e75636ea96a972cd8400314942c8cd2f3f884b0d27053cebcbf086d16f6f.json  query-6150fc33ad9a4490b53774d8ff21785bd53ee996cc01ad25ea981e38da5d13e2.json  query-95a49250a48a4d9921e691651c54442954872e2eafa966973910f3ba5f35baa4.json  query-984c6e2d9e52d49fd26cf4882dbdc2e33e3513b6a40da4c94e43663226d61814.json  query-a582ec6e6fd9cf5c4f6490cede3d2635e333512bc1541ff26aded64ba4929101.json  query-afe4e498a5ca06e53e146946ebb6d7d197b4543b66a033cc86e134a7e5c8466b.json  query-badc439625190cf9e929fbe7873bafb6e56e229401c18cdc7c32ae6c2404df44.json  query-bebe1c21bcfb15ad875e5f983ed62cb27175d754be1643aa30dc7b9a21fd35df.json  query-c65a0be8f12ec46d340ece42099e0799dbac486d766b33fa5ac84cd00401c509.json  query-db8d5f28ff9e130c80ce9c2ff186aa8d4725a19ac7492b58196b4715a03509d2.json  query-dc698556abdfc0e5f423e29115e99710946ce3c596c6a3754c59d2cedccc5ce1.json
examples/: gentoken.rs
migrations/: 0001_init.up.sql  0002_stats.down.sql
migrations/0001-init/: down.sql
migrations/0002-stats/: up.sql
queries/admins/: add.sql  exists.sql  list.sql  remove.sql
queries/cmd_usage/: add.sql  delete.sql  increment.sql  list_current.sql  list_total.sql
queries/custom_cmds/: add.sql  get.sql  list.sql  list_names.sql  remove.sql  remove_name.sql
src/: dirs.rs  discord.rs  emojis.rs  handler.rs  lib.rs  main.rs  settings.rs  state.rs  statistics.rs  textparse.rs  twitch.rs
src/api/: mod.rs  request.rs  response.rs
src/db/: connection.rs  mod.rs
src/discord/: admin.rs  mod.rs  owner.rs  user.rs
src/handler/: admin.rs  mod.rs  models.rs  owner.rs  user.rs
src/handler/user/: doc.rs  mod.rs
src/state/: mod.rs  serde.rs
src/twitch/: eventsub.rs  mod.rs
