[package]
name = "togglebot"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures-util = { version = "0.3.31", features = ["sink"] }
include_dir = "0.7.4"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2.0.5"
once_cell = "1.20.2"
poise = "0.6.1"
reqwest = { version = "0.12.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.134"
serde_rusqlite = "0.36.0"
time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.42.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-shutdown = "0.1.5"
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twitch_api = { version = "0.7.0-rc.8", features = ["eventsub", "helix", "reqwest"] }
unidirs = "0.1.1"

[dev-dependencies]
http = "1.2.0"
similar-asserts = "1.6.0"
test-case = "3.3.1"

[profile.release]
lto = "thin"
strip = true
