[package]
name = "togglebot"
version = "0.2.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.97"
futures-util = { version = "0.3.31", features = ["sink"] }
indexmap = { version = "2.8.0", features = ["serde"] }
indoc = "2.0.6"
once_cell = "1.21.1"
poise = "0.6.1"
reqwest = { version = "0.12.15", default-features = false, features = ["gzip", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3.40", features = ["formatting", "macros", "parsing", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-shutdown = "0.1.5"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twitch_api = { version = "0.7.1", features = ["eventsub", "helix", "reqwest"] }
unidirs = "0.1.1"

[dev-dependencies]
http = "1.3.1"
similar-asserts = "1.7.0"
test-case = "3.3.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }

[profile.release]
lto = "thin"
strip = true
